# gw2tpdb

./: .gitignore  README.md  README.org  WORKSPACE.bazel  datawars.py  datawars_tests.py  db.py  pyproject.toml  schema.sql
gw2tpdb/: __init__.py  print_items_enum.sh
gw2tpdb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gw2tpdb/api/: BUILD.bazel  datawars.py  endpoint.py
gw2tpdb/db/: schema.sql
src/: db.py
src/api/: datawars.py
src/db/: schema.sql
src/gw2tpdb/: __init__.py
src/gw2tpdb/api/: datawars.py  datawars_test.py  history.py  item.py  url.py
src/gw2tpdb/db/: db.py
