[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gw2tpdb"
version = "0.0.1"
authors = [
  { name="Cash Prokop-Weaver" },
]
description = "Database for Guild Wars 2 Trading Post"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "ratelimit",
]

[project.urls]
Homepage = "https://github.com/cashpw/gw2tpdb"
Issues = "https://github.com/cashpw/gw2tpdb/issues"
